# ChangeLog for dev-perl/XML-SAX
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-SAX/ChangeLog,v 1.36 2006/07/02 19:24:36 mcummings Exp $

*XML-SAX-0.14-r1 (02 Jul 2006)

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  +files/encodings.patch, +files/entities.patch, XML-SAX-0.13.ebuild,
  XML-SAX-0.14.ebuild, +XML-SAX-0.14-r1.ebuild:
  Marking stable. Also including a lost patch for SAX that fixes bug 127735

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> XML-SAX-0.14.ebuild:
  Stable on hppa

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> XML-SAX-0.14.ebuild:
  Marking sparc stable

*XML-SAX-0.14 (26 Apr 2006)

  26 Apr 2006; <mcummings@gentoo.org> +XML-SAX-0.14.ebuild:
  Version bump

  24 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> XML-SAX-0.13.ebuild:
  Add ~x86-fbsd keyword.

  13 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org> XML-SAX-0.13.ebuild:
  Stable on sparc

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> XML-SAX-0.13.ebuild:
  Mark 0.13 stable on ia64

  31 Jan 2006; Aron Griffis <agriffis@gentoo.org> XML-SAX-0.13.ebuild:
  Mark 0.13 stable on alpha

  21 Jan 2006; Markus Rothe <corsair@gentoo.org> XML-SAX-0.13.ebuild:
  Stable on ppc64

  15 Jan 2006; Michael Hanselmann <hansmi@gentoo.org> XML-SAX-0.13.ebuild:
  Stable on ppc.

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> XML-SAX-0.13.ebuild:
  marking sparc x86 stable

*XML-SAX-0.13 (27 Nov 2005)

  27 Nov 2005; Michael Cummings <mcummings@gentoo.org> +XML-SAX-0.13.ebuild:
  Version bump

  19 Oct 2005; Rene Nussbaumer <killerfox@gentoo.org> XML-SAX-0.12.ebuild:
  Unstable on hppa.

  03 Oct 2005; Aron Griffis <agriffis@gentoo.org> XML-SAX-0.12.ebuild:
  Mark 0.12 stable on ia64

  26 Aug 2005; Aron Griffis <agriffis@gentoo.org> XML-SAX-0.12.ebuild:
  add ~ia64

  29 May 2005; Markus Rothe <corsair@gentoo.org> XML-SAX-0.12.ebuild:
  Stable on ppc64
