@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-SAX/Attic/XML-SAX-0.13.ebuild,v 1.9 2006/07/02 19:24:36 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-SAX/Attic/XML-SAX-0.13.ebuild,v 1.10 2006/07/05 13:49:47 ian Exp $
 
 inherit perl-module
 
@@ -14,10 +14,10 @@ KEYWORDS="alpha amd64 hppa ia64 ~mips ppc ppc64 sparc x86 ~x86-fbsd"
 IUSE=""
 SRC_TEST="do"
 
-DEPEND="${DEPEND}
-	>=dev-perl/XML-NamespaceSupport-1.04
+DEPEND=">=dev-perl/XML-NamespaceSupport-1.04
 	>=dev-libs/libxml2-2.4.1
 	>=sys-apps/sed-4"
+RDEPEND="${DEPEND}"
 
 src_unpack() {
 	local installvendorlib
