@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-SAX
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-SAX/ChangeLog,v 1.36 2006/07/02 19:24:36 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/XML-SAX/ChangeLog,v 1.37 2006/07/05 13:49:47 ian Exp $
+
+  05 Jul 2006; Christian Hartmann <ian@gentoo.org> XML-SAX-0.12.ebuild,
+  XML-SAX-0.13.ebuild, XML-SAX-0.14.ebuild, XML-SAX-0.14-r1.ebuild:
+  Fixed RDEPEND wrt bug #134781; fixed header; fixed DEPEND
 
 *XML-SAX-0.14-r1 (02 Jul 2006)
 
